--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@ https://github.com/Team-Code/KA_Offline -->
         <canvas id="mycanvas"></canvas>
     </p>
     <h2 align="center">Instructions</h2>
-    <p align="center">Press any key to jump. Collect the hunney. That's all there is to it!<br />
-    Note! Hurry! Click inside the scene first to activate key press ability!</p>
+    <p align="center">Press any key to jump. Release key to fall. Collect the hunney. Gather more than 40 and you win. <br />
+        That's all there is to it!<br />
+    Note: Hurry! Click inside the scene first to activate key press ability!</p>
 </body>
 
 <!-- Run all the JavaScript stuff -->
